--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
   </head>
   <body>
     <h1>Welcome to New York</h1>
+    <footer>
+      This project was coded by Stefania Contu and is
+      <a
+        href="https://github.com/StefaniaContu/new-york-project"
+        target="_blank"
+        >open sourced</a
+      >
+    </footer>
   </body>
 </html>
