--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Welcome to New York</h1>
+    <h2>Capital city od the State of New York</h2>
     <footer>
       This project was coded by Stefania Contu and is
       <a
