Added and styled the Hero

--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
     <title>Welcome to New York</title>
   </head>
   <body>
-    <h1>Welcome to New York</h1>
-    <h2>Capital city od the State of New York</h2>
-    <footer>
-      This project was coded by Stefania Contu and is
-      <a
-        href="https://github.com/StefaniaContu/new-york-project"
-        target="_blank"
-        >open sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to New York</h1>
+        <h2>Capital city of the State of New York</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Stefania Contu and is
+        <a
+          href="https://github.com/StefaniaContu/new-york-project"
+          target="_blank"
+          >open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
