Added and styled footer

--- a/index.html
+++ b/index.html
@@ -22,13 +22,60 @@
         <a href="#more">Learn more</a>
       </header>
       <footer>
+        <section class="grid">
+          <div>
+            <h3>More about New York</h3>
+            <ul>
+              <li>
+                <a
+                  href="https://en.wikipedia.org/wiki/John_F._Kennedy_International_Airport"
+                  target="_blank"
+                  >New York Airport website</a
+                >
+              </li>
+
+              <li>
+                <a href="https://www.introducingnewyork.com/map" target="_blank"
+                  >Map of New York</a
+                >
+              </li>
+
+              <li>
+                <a
+                  href="https://new.mta.info/agency/new-york-city-transit"
+                  target="_blank"
+                  >Public transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Stefania I've been living in London for ten years.
+              I'm very fond with New York City. I created this page as part of a
+              project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+            </p>
+          </div>
+        </section>
+      </footer>
+      <p>
         This project was coded by Stefania Contu and is
         <a
           href="https://github.com/StefaniaContu/new-york-project"
           target="_blank"
           >open sourced</a
         >
-      </footer>
+      </p>
     </div>
   </body>
 </html>
