Added second section, pictures, html & styled

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <h2>Capital city of the State of New York</h2>
         <a href="#more">Learn more</a>
       </header>
+
       <main>
         <section class="grid grid-main">
           <div>
@@ -53,7 +54,123 @@
             </p>
           </div>
         </section>
+
+        <section class="section-2">
+          <h2 class="text-center">CAFÉS</h2>
+          <h3 class="text-center">My favourite vegan cafés in New York</h3>
+
+          <div class="grid grid-cafes">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/cafe-2.jpg"
+                  alt="cafe-1"
+                  class="image-responsive"
+                  height="185"
+                  width="185"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Café Spring</h4>
+                <p>
+                  Vegan restaurants eschew animal and animal-derivative
+                  products, including all meats, butter, dairy, gelatin, and
+                  honey. The focus is on whole food.
+                </p>
+                <h5>Address</h5>
+                <p>6th Avenue</p>
+                <h5>What I like about it</h5>
+                <p>
+                  A plant-based diet simply asks much less of the environment
+                  than a meat-based diet. What Can Vegans Eat? Just like
+                  everyone else
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/jn7JJVZkDbeUUU9L9"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/cafe-3.jpg"
+                  alt="cafe-1"
+                  class="image-responsive"
+                  height="185"
+                  width="185"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Café Summer</h4>
+                <p>
+                  Vegan restaurants eschew animal and animal-derivative
+                  products, including all meats, butter, dairy, gelatin, and
+                  honey. The focus is on whole food.
+                </p>
+                <h5>Address</h5>
+                <p>7th Avenue</p>
+                <h5>What I like about it</h5>
+                <p>
+                  A plant-based diet simply asks much less of the environment
+                  than a meat-based diet. What Can Vegans Eat? Just like
+                  everyone else
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/s6dcRVvgzRKgshCm7"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/cafe-1.jpg"
+                  alt="cafe-1"
+                  class="image-responsive"
+                  height="185"
+                  width="185"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Café Flowers</h4>
+                <p>
+                  Vegan restaurants eschew animal and animal-derivative
+                  products, including all meats, butter, dairy, gelatin, and
+                  honey. The focus is on whole food.
+                </p>
+                <h5>Address</h5>
+                <p>5th Avenue</p>
+                <h5>What I like about it</h5>
+                <p>
+                  A plant-based diet simply asks much less of the environment
+                  than a meat-based diet. What Can Vegans Eat? Just like
+                  everyone else
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://maps.app.goo.gl/jmzikxTZuGHrrDxR9"
+                  class="btn"
+                  target="_blank"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
+
       <footer>
         <section class="grid grid-footer">
           <div>
