Added Google maps embed

--- a/index.html
+++ b/index.html
@@ -61,14 +61,20 @@
 
           <div class="grid grid-cafes">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-img">
                 <img
-                  src="images/cafes/cafe-2.jpg"
+                  src="images/cafes/cafe-1.jpg"
                   alt="cafe-1"
                   class="image-responsive"
-                  height="185"
-                  width="185"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.43660792014!2d-73.9656177!3d40.77441459999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258a29d3847f5%3A0x564dfbba0141774a!2s5th%20Ave%2C%20New%20York%2C%20NY%2C%20Stati%20Uniti!5e0!3m2!1sit!2suk!4v1714036381925!5m2!1sit!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Café Spring</h4>
@@ -78,7 +84,7 @@
                   honey. The focus is on whole food.
                 </p>
                 <h5>Address</h5>
-                <p>6th Avenue</p>
+                <p>5th Avenue</p>
                 <h5>What I like about it</h5>
                 <p>
                   A plant-based diet simply asks much less of the environment
@@ -97,14 +103,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-img">
                 <img
-                  src="images/cafes/cafe-3.jpg"
-                  alt="cafe-1"
+                  src="images/cafes/cafe-2.jpg"
+                  alt="cafe-2"
                   class="image-responsive"
-                  height="185"
-                  width="185"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.8692261232272!2d-73.99279779999999!3d40.742903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a200c80098b%3A0x5d67779a4ec44d11!2s6th%20Ave%2C%20New%20York%2C%20NY%2C%20Stati%20Uniti!5e0!3m2!1sit!2suk!4v1714035782061!5m2!1sit!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Café Summer</h4>
@@ -114,7 +126,7 @@
                   honey. The focus is on whole food.
                 </p>
                 <h5>Address</h5>
-                <p>7th Avenue</p>
+                <p>6th Avenue</p>
                 <h5>What I like about it</h5>
                 <p>
                   A plant-based diet simply asks much less of the environment
@@ -133,14 +145,20 @@
             </div>
 
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-img">
                 <img
-                  src="images/cafes/cafe-1.jpg"
-                  alt="cafe-1"
+                  src="images/cafes/cafe-3.jpg"
+                  alt="cafe-3"
                   class="image-responsive"
-                  height="185"
-                  width="185"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.777787589088!2d-73.979038!3d40.7669119!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259ac19b15cb5%3A0xed96b53834f934b2!2s7th%20Ave%2C%20New%20York%2C%20NY%2C%20Stati%20Uniti!5e0!3m2!1sit!2suk!4v1714036723525!5m2!1sit!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Café Flowers</h4>
@@ -150,7 +168,7 @@
                   honey. The focus is on whole food.
                 </p>
                 <h5>Address</h5>
-                <p>5th Avenue</p>
+                <p>7th Avenue</p>
                 <h5>What I like about it</h5>
                 <p>
                   A plant-based diet simply asks much less of the environment
@@ -218,14 +236,16 @@
           </div>
         </section>
       </footer>
-      <p>
-        This project was coded by Stefania Contu and is
-        <a
-          href="https://github.com/StefaniaContu/new-york-project"
-          target="_blank"
-          >open sourced</a
-        >
-      </p>
+      <div class="footer-project">
+        <p>
+          This project was coded by Stefania Contu and is
+          <a
+            href="https://github.com/StefaniaContu/new-york-project"
+            target="_blank"
+            >open sourced</a
+          >
+        </p>
+      </div>
     </div>
   </body>
 </html>
