Added photo gallery

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             />
           </div>
           <div>
+            <a name="more"> </a>
             <h2>Why New York?</h2>
             <h3>New York, the city of the five boroughs</h3>
             <p>
@@ -184,6 +185,21 @@
                   >Learn more</a
                 >
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section-3">
+          <h2 class="text-center">Gallery</h2>
+          <h3 class="text-center">Photos of New York form the web</h3>
+          <div class="picture-gallery">
+            <div class="grid grid-gallery">
+              <img src="images/gallery/photo1.jpg" alt="photo1" />
+              <img src="images/gallery/photo2.jpg" alt="photo2" />
+              <img src="images/gallery/photo4.jpg" alt="photo4" />
+              <img src="images/gallery/photo5.jpg" alt="photo5" />
+              <img src="images/gallery/photo6.jpg" alt="photo6" />
+              <img src="images/gallery/photo7.jpg" alt="photo7" />
             </div>
           </div>
         </section>
